[tool.poetry]
name = "ha-devtools"
version = "0.0.0"
license = "MIT"
description = "Home Assistant developer tools"
authors = ["Bendik R. Brenne <bendik@konstant.no>"]
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
homeassistant = "^2025.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.7"

[tool.ruff]
src = [
  "custom_components/devtools",
]

[tool.pylint."MESSAGES CONTROL"]
# Reasons disabled:
# format - handled by ruff
# duplicate-code - unavoidable
# used-before-assignment - false positives with TYPE_CHECKING structures
disable = [
  "abstract-method",
  "duplicate-code",
  "format",
  "unexpected-keyword-arg",
  "used-before-assignment",
  "missing-function-docstring",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
